# automation-auditor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
audit/report_onpeer_generated/: AuditReport1.md  AuditReport2.md  AuditReport3.md  AuditReport4.md  AuditReport5.md
audit/report_onself_generated/: AuditReport1.md  AuditReport2.md  AuditReport3.md  AuditReport4.md  AuditReport5.md  AuditReport6.md
docs/: architecture_notes.md  chat.json
specs/001-langgraph-auditor/: spec.md
specs/001-langgraph-auditor/checklists/: requirements.md
src/: graph.py  main.py  state.py
src/nodes/: aggregators.py  detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
tests/: test_doc_tools.py  test_graph.py  test_judges.py  test_repo_tools.py
