[project]
name = "automation-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroid>=4.0.4",
    "docker>=7.1.0",
    "gitpython>=3.1.46",
    "langchain-anthropic>=1.3.4",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pylint>=4.0.5",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
